--- a/my-vue-app/package.json
+++ b/my-vue-app/package.json
@@ -14,9 +14,11 @@
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "element-plus": "^2.11.8",
+    "marked": "^17.0.1",
     "pinia": "^3.0.4",
     "vue": "^3.5.24",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
